@@ -38,10 +38,11 @@ var CloudCommander, Util, DOM = {}, CloudFunc;
         
         /* Обьект содержит функции для работы с CloudCmd API */
         RESTfull        = function(){
-            this.delete = function(pUrl, pCallBack){
+            this.delete = function(pUrl, pData, pCallBack){
                 sendRequest({
                     method      : 'DELETE',
                     url         : CloudFunc.FS + pUrl,
+                    data        : pData,
                     callback    : pCallBack
                 });
             };
