@@ -41,6 +41,7 @@ var CloudCommander, Util, DOM;
         F5          : 116,
         F6          : 117,
         F7          : 118,
+        F8          : 119,
         F10         : 121,
         
         TRA         : 192 /* Typewritten Reverse Apostrophe (`) */
@@ -169,6 +170,10 @@ var CloudCommander, Util, DOM;
                             
                             case KEY.F7:
                                 DOM.promptNewDir();
+                                break;
+                            
+                            case KEY.F8:
+                                DOM.promptDeleteCurrent(lCurrent);
                                 break;
                             
                             case KEY.F:
