@@ -103,7 +103,7 @@
     exports.appcache                        = srvrequire('appcache'),
     exports.cache                           = srvrequire('cache').Cache,
     exports.cloudfunc                       = librequire('cloudfunc'),
-    exports.dir                             = srvrequire('dir');
+    exports.dir                             = srvrequire('dir'),
     exports.rest                            = srvrequire('rest').api,
     exports.update                          = srvrequire('update'),
     exports.ischanged                       = srvrequire('ischanged');
