@@ -109,26 +109,25 @@
                             else
                                 main.sendError(pParams, pErr);
                         });
-                    else
-                        fs.stat(p.name, function(pError, pStat){
-                            if(!pError)
-                                if( pStat.isDirectory() )
-                                    main.commander.getDirContent(pParams.name, function(pError, pData){
-                                        if(!pError){
-                                            pParams.request.url += '.json';
-                                            pParams.data = Util.stringifyJSON(pData);
-                                            main.sendResponse(pParams);
-                                        }
-                                        else
-                                            main.sendError(pParams, pError);
-                                    });
-                                else
-                                    main.sendFile(pParams);
+                else
+                    fs.stat(p.name, function(pError, pStat){
+                        if(!pError)
+                            if( pStat.isDirectory() )
+                                main.commander.getDirContent(pParams.name, function(pError, pData){
+                                    if(!pError){
+                                        pParams.request.url += '.json';
+                                        pParams.data = Util.stringifyJSON(pData);
+                                        main.sendResponse(pParams);
+                                    }
+                                    else
+                                        main.sendError(pParams, pError);
+                                });
                             else
-                                main.sendError(pParams, pError);
-                    
-                        });
-                    
+                                main.sendFile(pParams);
+                        else
+                            main.sendError(pParams, pError);
+                
+                    });
                     break;
                     
                 case 'PUT':
@@ -157,12 +156,18 @@
                 case 'DELETE':
                     if(lQuery === 'dir')
                         fs.rmdir(p.name, function(pError){
-                        if(!pError)
-                            main.sendResponse(pParams, 'Folder ' + p.name + ' deleted.');
-                        else
-                            main.sendError(pParams, pError);
+                            if(!pError)
+                                main.sendResponse(pParams, 'Folder ' + p.name + ' deleted.');
+                            else
+                                main.sendError(pParams, pError);
+                            });
+                    else if(lQuery === 'files'){
+                        getBody(p.request, function(pBody){
+                            var lFiles = Util.parseJSON(pBody);
+                            for(var i = 0, n = lFiles.length; i < n; i ++)
+                                Util.log(lFiles[i]);
                         });
-                    else 
+                    }else
                         fs.unlink(p.name, function(pError){
                             if(!pError)
                                 main.sendResponse(pParams, 'File ' + p.name + ' delete.');
